--- a/SoftwareLL/css/main.css
+++ b/SoftwareLL/css/main.css
@@ -1,36 +1,66 @@
 /* General settings */
 
 body {
-    font-family: calibri;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
     background-image: url("../multimedia/background.jpg");
-    width: 80%;
-    margin-left: 10%;
+}
+
+header {
+    padding: 1%;
+    margin-left: 3.5%; 
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #004870;
+}
+
+li {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+li a:hover{
+    background-color: #007AA4;
 }
 
 nav {
-    margin-top: 7%;
-    margin-left: 15%;
-    width: 70%;
+    margin-top: 2%;
+    width: 80%;
 }
 
-nav a {
+a {
+    text-decoration: none;
+}
+
+a:visited {
     color: white;
-    font-size: 18px;
+}
+
+a:unvisited {
+    color: white;
+}
+
+figcaption {
+    text-align: center;
 }
 
 h1 {
     color: white;
-    text-align: center; 
-    font-family: Copperplate; 
+    text-align: left;
+    margin-left: 10px;
+    font-family: Rockwell; 
     font-size: 36px
 }
 
-.navigation {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-between;
-    list-style: none;
+td {
+    padding: 2%;
 }
-
