Created database using MySQL and phpmyadmin interface on InfinityFree. Also, transfers were made from previous Web project. Transfer contains files such as db.php and sesija.php. New pages were add and resources (images, scripts and such).

--- a/SoftwareLL/css/main.css
+++ b/SoftwareLL/css/main.css
@@ -33,8 +33,9 @@ li a:hover{
 }
 
 nav {
-    margin-top: 2%;
-    width: 80%;
+    margin-top: 1%;
+    margin-left: 3.5%;
+    width: 93.5%;
 }
 
 a {
