--- a/SoftwareLL/css/main.css
+++ b/SoftwareLL/css/main.css
@@ -33,6 +33,10 @@ li:nth-child(5){
     float: right;
 }
 
+li:nth-child(6){
+    float: right;
+}
+
 li a:hover{
     background-color: #007AA4;
 }
@@ -198,3 +202,17 @@ button:hover {
     }
 }
 
+/* Register */
+
+.inputRegisterButton{ 
+    background-color: #004870;
+    color: white;
+    padding: 14px 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.inputRegisterButton:hover{
+    background-color: #007AA4;
+
+}
