Achieved DB connection. A few touch-ups to Login Modal dialogue and overall look. User is acknowledge, next is putting his login and role in session and restricting him to certain webpages. And turn Registration form to pop-up modal also.

--- a/SoftwareLL/css/main.css
+++ b/SoftwareLL/css/main.css
@@ -37,16 +37,17 @@ li:nth-child(6){
     float: right;
 }
 
-li a:hover{
+li:hover{
     background-color: #007AA4;
 }
 
 nav {
-    margin-top: 2%;
+    margin-top: 1%;
     width: 100%;
 }
 
 a {
+    color: white;
     text-decoration: none;
 }
 
@@ -63,7 +64,7 @@ figcaption {
 }
 
 .footer {
-    margin-top: 20%;
+    margin-top: 25%;
     left: 0;
     bottom: 0;
     width: 100%;
