--- a/SoftwareLL/css/main.css
+++ b/SoftwareLL/css/main.css
@@ -93,7 +93,7 @@ td {
 
 /* Login */
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email]  {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
