Swap Login & Register with Logout successful. On session start and after session successfully put the user login data into USER array, it swaps the login/logout tabs accordingly. Jscripts functions ShowLogin & ShowLogout are redundant, considering they can only be triggered when the document is ready (courtesy of jquery), and cannot before because of the lack of id from html. More so, jscript is not in position to take session variables into account considering they are on the server, thus there is no other way for now, to do the .toggle/(hide/show) with jscript.

--- a/SoftwareLL/css/main.css
+++ b/SoftwareLL/css/main.css
@@ -37,6 +37,10 @@ li:nth-child(6){
     float: right;
 }
 
+li:nth-child(7){
+    float: right;
+}
+
 li:hover{
     background-color: #007AA4;
 }
@@ -215,5 +219,4 @@ button:hover {
 
 .inputRegisterButton:hover{
     background-color: #007AA4;
-
 }
