Administrator now shows data from DB via datatables.net. Logout has been touched up, and registering users feature now checks for existing users and emails. For now, administration page will have only the deletion option for administrator, and administrators will only have the access to the table of users. A registered user can only visit but will have locked content.

--- a/SoftwareLL/css/main.css
+++ b/SoftwareLL/css/main.css
@@ -91,9 +91,6 @@ h1 {
     font-size: 36px
 }
 
-td {
-    padding: 2%;
-}
 
 /* Login */
 
@@ -219,4 +216,8 @@ button:hover {
 
 .inputRegisterButton:hover{
     background-color: #007AA4;
+}
+
+#users_table {
+    color: black;
 }
