--- a/SoftwareLL/css/main.css
+++ b/SoftwareLL/css/main.css
@@ -41,6 +41,10 @@ li:nth-child(7){
     float: right;
 }
 
+li:nth-child(8){
+    float: right;
+}
+
 li:hover{
     background-color: #007AA4;
 }
@@ -179,8 +183,8 @@ button:hover {
 
 /* Add Zoom Animation */
 .animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
+    -webkit-animation: animatezoom 0.3s;
+    animation: animatezoom 0.3s
 }
 
 @-webkit-keyframes animatezoom {
