--- a/SoftwareLL/css/main.css
+++ b/SoftwareLL/css/main.css
@@ -225,3 +225,29 @@ button:hover {
 #users_table {
     color: black;
 }
+
+/* Media */
+
+.grid-container {
+    display: grid;
+    width: 90%;
+    margin-left: 10%;
+    grid-template-columns: auto auto auto;
+}
+
+/* [1] The container */
+.image-zoom {
+  height: 300px; /* [1.1] Set it as per your need */
+  /*overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+}
+
+/* [2] Transition property for smooth transformation of images */
+.image-zoom img {
+  transition: transform .5s ease;
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.image-zoom:hover img {
+  transform: scale(1.5);
+}
+
