--- a/SoftwareLL/css/skyrim_explorer.css
+++ b/SoftwareLL/css/skyrim_explorer.css
@@ -3,7 +3,16 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    background-image: url("../multimedia/background.jpg");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    -webkit-transition: background 1s;
+    -moz-transition: background 1s;
+    -o-transition: background 1s;
+    -ms-transition: background 1s;
+    transition: background 1s;
 }
 
 header {
@@ -247,4 +256,3 @@ button:hover {
 .image-zoom:hover img {
     transform: scale(1.1);
 }
-
